build_log.txt
[ 19%] Built target ggml-base
[ 52%] Built target ggml-cpu
[ 56%] Built target ggml
[ 60%] Built target whisper
[ 63%] Building CXX object CMakeFiles/IdeaWalker.dir/src/application/OrganizerService.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/application/OrganizerService.cpp:198:7: error: expected unqualified-id before ‘else’
  198 |     } else {
      |       ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/application/OrganizerService.cpp:201:1: error: expected declaration before ‘}’ token
  201 | }
      | ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/application/OrganizerService.cpp:203:6: error: ‘OrganizerService’ has not been declared
  203 | void OrganizerService::setAIPersona(domain::AIPersona persona) {
      |      ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/application/OrganizerService.cpp:203:6: error: variable or field ‘setAIPersona’ declared void
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/application/OrganizerService.cpp:203:37: error: ‘domain’ has not been declared
  203 | void OrganizerService::setAIPersona(domain::AIPersona persona) {
      |                                     ^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/application/OrganizerService.cpp:209:1: error: expected declaration before ‘}’ token
  209 | } // namespace ideawalker::application
      | ^
gmake[2]: *** [CMakeFiles/IdeaWalker.dir/build.make:191: CMakeFiles/IdeaWalker.dir/src/application/OrganizerService.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:247: CMakeFiles/IdeaWalker.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2
